<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">About Me</string>
    <string name="name">Vitor Botelho de Souza</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vulputate et urna at accumsan. Duis ullamcorper sapien euismod urna auctor, id lacinia nisl laoreet. Donec commodo, diam vel finibus tincidunt, tortor elit malesuada justo, at porttitor nisi purus et eros. Ut laoreet condimentum justo, viverra scelerisque orci laoreet non. Sed vitae consectetur mauris. Sed vel mi vitae leo pharetra aliquam. Etiam elit tortor, commodo id dignissim eget, porta vitae velit.\n\nSuspendisse potenti. Integer condimentum odio vitae urna accumsan, ac laoreet ante tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi ut aliquet justo. Aenean et leo condimentum, mattis ex feugiat, mollis tellus. In rutrum ante vel lorem blandit, a venenatis neque eleifend. Interdum et malesuada fames ac ante ipsum primis in faucibus.\n\nDonec a pellentesque mauris. Donec suscipit cursus efficitur. Aenean interdum ligula vel sodales egestas. Maecenas vel velit odio. Phasellus ut orci vitae augue hendrerit tempor nec semper metus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum rutrum sollicitudin pharetra. Vivamus id ex sit amet tortor suscipit faucibus. Phasellus tempus tincidunt eros, non rhoncus diam pharetra ac. Duis venenatis lacus sit amet neque viverra lacinia. Nam risus nisi, cursus in aliquet ut, tristique ac lorem.\n\nPraesent vel auctor sem, non commodo urna. Duis pellentesque imperdiet vestibulum. Etiam pretium magna quis lorem finibus, vel porta elit interdum. Fusce tempus ipsum et leo rhoncus auctor. Donec nec auctor nunc. Nulla quis vehicula dolor, sed vestibulum augue. Etiam lobortis metus sit amet urna consequat egestas. Phasellus iaculis bibendum tortor sit amet fringilla. Morbi justo est, rhoncus eget magna id, scelerisque eleifend sem.\n\nAenean rutrum quis est et commodo. Suspendisse risus ligula, rhoncus quis elementum vel, ultricies non turpis. Mauris non commodo est. Ut id aliquet nunc. Etiam sit amet faucibus neque. Aenean tristique ipsum sit amet ornare pharetra. Integer tincidunt efficitur mi eu hendrerit. Curabitur quis mauris dignissim, cursus nunc eu, condimentum augue. Sed condimentum volutpat tempus. Curabitur at augue magna.</string>
    <string name="nickname_hint"> Type your nickname </string>
    <string name="done">Done</string>
</resources>